# JoltEd-Chrome-Extension

./: .gitignore  README.md  api.js  background.js  content.js  dist.pem  manifest.json  package-lock.json  package.json  popup.css  popup.html  popup.js  privacy.md  tailwind.config.js  vite.config.js
jolted-chrome-ext-server/: README.md  pyproject.toml
jolted-chrome-ext-server/jolted_chrome_ext_server/: server.py
server_original/: app.py  requirements.txt
src/: background.js  content.js  main.js  popupMod.js  popupTemplate.js  selectionMod.js  textReplacementMod.js
src/styles/: tailwind.css
