[tool.poetry]
name = "jolted-chrome-ext-server"
version = "0.1.0"
description = ""
authors = ["Nathan Laundry <nathan.laundry@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
requests = "^2.31.0"
uvicorn = "^0.23.2"
poetry-plugin-dotenv = "^0.5.3"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
dev-server = "uvicorn jolted_chrome_ext_server.server:app --reload"
start = "uvicorn jolted_chrome_ext_server.server:app --reload"
